# playground

./: .env.op  .envrc  .gitignore  AGENTS.md  CLIS.md  Cargo.toml  FEEDBACK.md  README.md  RESOURCES.md  go.work  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.agents/skills/commit-polish/: SKILL.md
tools/: _blender_ops.py  _feedback_insert.py  _lain_toy.py  _links_parse.py  blender.sh  check-deps.sh  check-images.sh  feedback.sh  install-hooks.sh  lain-toy.sh  links.sh  seeds.sh  seeds.txt  spotify.sh  topics.txt
tools/hooks/: pre-commit
toys/bestiary100/: BRIEF.md  INDEX.md  README.md  assemble.py
toys/bestiary100/creatures/: 1.md  10.md  100.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  2.md  20.md  21.md  22.md  23.md  24.md  25.md  26.md  27.md  28.md  29.md  3.md  30.md  31.md  32.md  33.md  34.md  35.md  36.md  37.md  38.md  39.md  4.md  40.md  41.md  42.md  43.md  44.md  (+60 more)
toys/bestiary100/creatures/md/: 1.md  10.md  100.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  2.md  20.md  21.md  22.md  23.md  24.md  25.md  26.md  27.md  28.md  29.md  3.md  30.md  31.md  32.md  33.md  34.md  35.md  36.md  37.md  38.md  39.md  4.md  40.md  41.md  42.md  43.md  44.md  (+60 more)
toys/cerebra/: README.md  brain.py  main.py  pyproject.toml  viz.py  world.py
toys/dilemma/: README.md  main.py  pyproject.toml
toys/dilemma/dilemma/: __init__.py  __main__.py  engine.py  strategies.py  tournament.py
toys/dilemma/examples/: output.csv
toys/glyphgen/: README.md  go.mod  main.go
toys/heapscape/: Cargo.toml  README.md
toys/heapscape/src/: bench.rs  harness.rs  main.rs  rng.rs  tui.rs  viz.rs  workload.rs
toys/heapscape/src/alloc/: buddy.rs  bump.rs  freelist.rs  mod.rs  segfit.rs
toys/kalmanville/: README.md  main.py  pyproject.toml
toys/mythwright/: README.md  package.json
toys/mythwright/src/: biomes.ts  civ.ts  climate.ts  grid.ts  hydrology.ts  main.ts  palette.ts  rng.ts  smoke.ts  snapshot.ts  tectonics.ts  world.ts
toys/orderbook/: README.md  main.py  pyproject.toml
toys/partilife/: README.md  main.py  pyproject.toml
toys/phloraflora/: README.md  main.py  pyproject.toml
toys/phonoscape/: README.md  main.py  pyproject.toml
toys/primordia/: README.md  main.py  pyproject.toml
toys/qurwen/: README.md  main.py  pyproject.toml
toys/rl-agent/: README.md  main.py  pyproject.toml
toys/rrt-viz/: README.md  index.html  package.json
toys/saturn/: README.md  main.py  pyproject.toml  saturn.py
toys/saturn/examples/: aim-20.cnf  pt-25.cnf  solve-pt25.txt  sweep-vars40.txt  trace-pt25.txt
toys/sunforge/: DESIGN.md  README.md  build_scene.py  gen_scene.py  greebles.py  pyproject.toml  render_anim.py
toys/sunforge/sim/: __init__.py  construction.py  events.py  flightpath.py  lattice.py  statemaps.py  swarm.py
toys/svgart/: README.md  drift_panorama.py
toys/wordrelief/: README.md  build_scene.py  gen_terrain.py
toys/zopa-terrain/: README.md  index.html  package.json
