# Rust workspace for the playground. One Cargo.lock at the root; each Rust toy
# is a member crate under toys/. Globs don't work here (cargo requires every
# match to be a crate, and toys/ is polyglot) — list each Rust toy explicitly.
[workspace]
resolver = "2"
members = ["toys/heapscape"]
exclude = []

[workspace.package]
edition = "2021"
authors = ["Shresht Bhowmick <bhowmickshresht@gmail.com>"]

[profile.dev]
opt-level = 0
