[project]
name = "playground"
version = "0.1.0"
description = "A monorepo playground for tetraslam and the claudes to build fun things."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

# uv workspace: one lockfile at the root. Members are an EXPLICIT list of
# Python projects — do NOT use a bare `toys/*` glob, since toys/ also holds
# non-Python toys (Go/Rust/TS) that have no pyproject.toml, which makes uv
# refuse to resolve. Add a Python toy's path here when you create it.
[tool.uv.workspace]
members = ["lib/py/*", "toys/phloraflora", "toys/phonoscape", "toys/qurwen", "toys/orderbook", "toys/kalmanville"]
exclude = ["toys/*"]

[tool.uv]
# Keep the root virtualenv at .venv (activated by .envrc).
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Sensible-but-not-annoying defaults for a playground.
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # line length handled by formatter; don't fail builds in a play space

[tool.ruff.format]
quote-style = "double"
